User 3 - Feature delete user
