# src/main/java/com/example/usermanageapirest/application/controller/UsersApi.java
@@ -16,6 +16,7 @@ import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PathVariable;
 
 @Tag(name = "User", description = "Operations to manage users")
 public interface UsersApi {
@@ -50,4 +51,21 @@ public interface UsersApi {
 		@Parameter(name = "userId", description = "User Id", required = true) User user,
 		@RequestBody(description = "Update user") UserUpdateRequest userUpdateRequest
 	) throws ResourceCreateException, ValidationException;
+	@Operation(
+		summary = "Delete user",
+		description = "Delete user",
+		operationId = "delete",
+		tags = {"User"})
+	@ApiResponses(value = {
+		@ApiResponse(responseCode = "200", description = "Successful delete user."),
+
+		@ApiResponse(responseCode = "403", description = "Resource forbidden", content = @Content(schema = @Schema(implementation = ErrorResponse.class))),
+
+		@ApiResponse(responseCode = "404", description = "Entity Not Found", content = @Content(schema = @Schema(implementation = ErrorResponse.class)))
+	})
+	ResponseEntity<Void> delete(
+		@Parameter(name = "userId", description = "User Id", required = true)
+		@PathVariable("userId") Integer userId
+	);
+
 }
